infra/k8s/app_depl.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-depl
spec:
  selector:
    matchLabels:
      app: hello-node-skaff
  template:
    metadata:
      labels:
        app: hello-node-skaff
    spec:
      containers:
      - name: hello-node-skaff
        image: randyl/hello-node-skaff
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: hello-srv
spec:
  selector:
    app: hello-node-skaff
  ports:
  - name: hello-srv
    port: 3000
    targetPort: 3000
    protocol: TCP
